--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -3,6 +3,7 @@
     background-color: #000000;
     margin: 0 auto;
     width: 100%;
+    min-height: 100vh;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
