--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,13 +1,13 @@
 .popup__input {
-    border: none;
-    box-sizing: border-box;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     font-size: 14px;
     line-height: 17px;
     margin: 30px 0 0 0;
+    border: none;
+    box-sizing: border-box;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 13px;
     font-weight: 400;
-    outline-color: blue;
+    outline-color: #fff;
 }
 
 @media (max-width: 530px) {
