--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,3 @@
-.elements__remove-button_state_hidden {
-    display: none;
-}
-
 @import url('./blocks/page/page.css');
 @import url('./blocks/header/header.css');
 @import url('./blocks/header/__logo/header__logo.css');
@@ -45,3 +41,20 @@
 @import url('./blocks/popup/__button/_confirm-delete/popup__button_confirm-delete.css');
 @import url('./blocks/elements/__like-count/elements__like-count.css');
 @import url('./blocks/elements/__like/elements__like.css');
+@import url('./blocks/popup/__input/_type/popup__input_type_login.css');
+@import url('./blocks/header/__link/header__link.css');
+@import url('./blocks/header/__link/_state/header__link_state_active.css');
+@import url('./blocks/header/__email/header__email.css');
+@import url('./blocks/popup/__tooltip/popup__tooltip.css');
+@import url('./blocks/popup/__title/_type/popup__title_type_tooltip.css');
+@import url('./blocks/popup/__form/_type/popup__form_type_tooltip.css');
+@import url('./blocks/popup/__wrapper/popup__wrapper.css');
+@import url('./blocks/header/__info/header__info.css');
+
+/* + */
+
+@import url('./blocks/auth-page/auth-page.css');
+@import url('./blocks/auth-page/__title/auth-page__title.css');
+@import url('./blocks/auth-page/__link/auth-page__link.css');
+@import url('./blocks/auth-page/__form/auth-page__form.css');
+@import url('./blocks/auth-page/__button/auth-page__button.css');
